Fixes site width on smaller devices such as phones

--- a/Turwaith.dev/wwwroot/css/styles.css
+++ b/Turwaith.dev/wwwroot/css/styles.css
@@ -55,9 +55,17 @@ header {
 
 main {
     text-align: left;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    width: calc(100% - 20vw);
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
+
+@media (max-width: 768px) {
+    main {
+        margin-left: 5vw;
+        margin-right: 5vw;
+        width: calc(100% - 10vw);
+    }
 }
 
 .main {
@@ -172,10 +180,20 @@ a {
 
 .content-container {
     margin-top: 60px; /* Adjust this value based on the height of your header */
-    max-width: 60vw;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: calc(100% - 40vw);
+    margin-left: 20vw;
+    margin-right: 20vw;
     width: 100%;
+}
+
+@media (max-width: 768px){
+.content-container {
+        margin-top: 60px; /* Adjust this value based on the height of your header */
+        max-width: calc(100% - 20vw);
+        margin-left: 10vw;
+        margin-right: 10vw;
+        width: 100%;
+    }
 }
 
 footer {
